--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 RESEND_API_KEY=re_79RA1MAS_JRzwJa3s5PTT7BfY8q66nrGt
 FROM_EMAIL=tusharkhatter2000@gmail.com
+EMAIL=tusharkhatter2000@gmail.com
+EMAIL_PASS=lvpwdelmjluuebjm
