--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "@heroicons/react": "^2.1.1",
     "framer-motion": "^11.0.20",
     "next": "14.1.0",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-animated-numbers": "^0.18.0",
     "react-dom": "^18",
-    "react-type-animation": "^3.2.0",
-    "resend": "^3.2.0"
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
